<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atama</name>
  <version>0.0.0</version>
  <description>Head Package for ROS 2 Project</description>
  <maintainer email="jalilpro31@gmail.com">Maroqi Jalil</maintainer>
  <license>MIT License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>atama_interfaces</depend>
  <depend>kansei_interfaces</depend>
  <depend>keisan</depend>
  <depend>libopencv-dev</depend>
  <depend>ninshiki_interfaces</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>shisen_interfaces</depend>
  <depend>tachimawari</depend>
  <depend>tachimawari_interfaces</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
